<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:focusable="true"
		android:focusableInTouchMode="true"
		style="@style/Container">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/which_of_the_following"
			style="@style/HeadingMedium"/>

		<CheckBox
			android:id="@+id/io"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/io"/>

		<CheckBox
			android:id="@+id/kepler"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/kepler"/>

		<CheckBox
			android:id="@+id/charon"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/charon"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/which_space_shuttle"
			style="@style/HeadingMedium"/>

		<EditText
			android:id="@+id/shuttle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/type_your_answer"/>

		<Button
			android:id="@+id/start_quiz"
			android:text="@string/next_question"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/ButtonNext"/>

	</LinearLayout>

</ScrollView>

