<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_height="match_parent"
			android:layout_width="match_parent">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		style="@style/Container">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/answered_correctly"
			style="@style/HeadingMedium"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/answers_correct"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:textAlignment="center"
				android:layout_height="wrap_content"
				style="@style/HeadingLarge"/>

			<TextView
				android:layout_width="70dp"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:text="@string/of"
				style="@style/HeadingMedium"/>

			<TextView
				android:id="@+id/answers_total"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:textAlignment="center"
				android:layout_height="wrap_content"
				style="@style/HeadingLarge"/>

		</LinearLayout>


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/congratulations"
			style="@style/HeadingMedium"/>

		<Button
			android:text="@string/take_another_quiz"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/button_play_again"
			style="@style/ButtonNext"/>

	</LinearLayout>

</ScrollView>
